--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./app.css">
-    <link href="Avatar/avatar.html" rel='' /> 
+    <link rel="stylesheet" href="./App.css">
 </head>
 <body>
 </body>
