--- a/Cards/index.html
+++ b/Cards/index.html
@@ -158,5 +158,19 @@
             </div>
         </div>
     </div>
+    <div class="container-card-tree">
+        <div class="card-tree-container">
+            <div class="img-card-tree" style="background-image: url('../img/chika.gif');">
+            </div>
+            <div class="card-tree-content">
+            </div>
+        </div>
+        <div class="card-tree-container">
+            <div class="img-card-tree" style="background-image: url('../img/chika.gif');">
+            </div>
+            <div class="card-tree-content">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
