--- a/Cards/index.html
+++ b/Cards/index.html
@@ -160,13 +160,15 @@
     </div>
     <div class="container-card-tree">
         <div class="card-tree-container">
-            <div class="img-card-tree" style="background-image: url('../img/chika.gif');">
+            <div class="img-card-tree">
+                <img class="img-card-rombo-tree" src='../img/chika2.png' alt="">
             </div>
             <div class="card-tree-content">
             </div>
         </div>
         <div class="card-tree-container">
-            <div class="img-card-tree" style="background-image: url('../img/chika.gif');">
+            <div class="img-card-tree">
+                <img class="img-card-rombo-tree" src='../img/chika.gif' alt="">
             </div>
             <div class="card-tree-content">
             </div>
