--- a/Cards/index.html
+++ b/Cards/index.html
@@ -161,7 +161,7 @@
     <div class="container-card-tree">
         <div class="card-tree-container">
             <div class="img-card-tree">
-                <img class="img-card-rombo-tree" src='../img/chika2.png' alt="">
+                <img class="img-card-rombo-tree" src='../img/info.png' alt="">
             </div>
             <div class="card-tree-content">
             </div>
